--- a/www/outline/index.html
+++ b/www/outline/index.html
@@ -1,18 +1,17 @@
-﻿<!doctype html>
-<html><head>
+
   <meta charset = "utf-8">
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-30 15:29:04 (Thursday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-30 21:18:44 (Thursday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
   <title></title>
-        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
-		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
-        <link href="./../image/common.css" rel="stylesheet" type="text/css">
-		        <link rel="shortcut icon" href="./../images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
+  <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
+  <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="./../images/favicon.ico">
 
   <script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
 
@@ -28,268 +27,53 @@
 
 </script>
 
-    <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
+  top: 18px !important;
+  left: 50% !important;
+  margin-left: -100px !important;
+  width: 200px !important;
+  border: 2px rgba(255,255,255,.38) solid !important;
+  border-radius: 4px !important;
 }
 
 .en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
+  margin-left: 0px !important;
 }
 </style>
 
 
-  <title>NPO法人　キャリアサポートセンター奈良</title>
+<title>NPO法人　キャリアサポートセンター奈良</title>
 
-</head>
-  <body class="page">
-    <div id="wrapper">
-      <div id="header">
-        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
-
-              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
-
-              width="452"></a> </h1>
-        <div id="right">
-          <ul>
-            <li id="index">http://cscnara.ksaka.net/index.html</li>
-            <li id="contact"><a href="./../contact/index.html"></a><br>
-            </li>
-            <li id="menu_sitemap"><a href="./../sitemap/index.html"
-
-                target="_parent"></a><br>
-            </li>
-          </ul>
-          <p>本部：橿原新ノ口校<br>
-            奈良県橿原市葛本町307-12　アメニティ24-20A<br>
-            TEL&amp;FAX:0744-29-6776<br>
-            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>
-        </div>
-        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>
-      </div>
-      <div id="column">
-        <div id="column_left">
-          <ul id="sub_menu">
-            <li id="outline"><a href="./../outline/index.html" target="_parent">団
-                体概要</a></li>
-            <li id="admission"><a href="./../admission/index.html"
-
-                target="_parent">ご支援・入会のご案内</a></li>
-            <li id="link"><a href="./../link/index.html">リンク集</a></li>
-          </ul>
-          <ul id="glo_menu">
-            <li id="school"><a href="./../school/index.html" target="_parent">職
-                業訓練・CSスクール</a></li>
-            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ
-                ソコンなら青年おたすけ隊</a></li>
-            <li id="counseling"><a href="./../counseling/index.html"
-
-                target="_parent">相談・カウンセリング</a></li>
-            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
-                ト脱出サークル</a></li>
-          </ul>
-          <!-- 原稿--> <h4 class="letter_title">理事長より</h4>
-<p>就職活動を自分ひとりで考えてなかなか就職先が決まらず悩んでいませんか。<br>
-  当然のことながら、最終的に決断するのは自分自身ですから、自分で考え悩むのもよいでしょう。<br>
-  しかし、そこにたどり着くまでには家族や友人・先輩に相談したり、アドバイスをいただくことも必要なプロセスです。</p>
-  <p>そこで重要なのは「客観的な意見」です。「将来の自分」を探し出すうえで、自分の考えに客観的なアドバイスを取り入れ、「ミスマッチ」のない就職先を探し出すことが大事です。<br>
-  当法人では、迷路に迷い込んだ皆さんをバックアップするために様々な相談に応じています。<br>
-  皆さんと共にピッタリしたお仕事や働き方を考えていきましょう。<br>
-</p>
-
-<h4 class="letter_title">団体概要</h4>
-
-<table id="table_outline" width="532" border="0">
-  <tbody><tr>
-    <td width="135"><p>認　証</p></td>
-    <td colspan="2"><p>平成16年10月29日</p></td>
-  </tr>
-  <tr>
-    <td><p>設　立</p></td>
-    <td colspan="2"><p>平成16年11月 1日</p></td>
-  </tr>
-  <tr>
-    <td><p>役　員</p></td>
-    <td width="195"><p>[ 理事 ]
-      <br>
-      山田　政利（理事長）<br>
-      佐藤　四郎（副理事長）      <br>
-      橋爪　勝次
-  <br>
-      安井　誠<br>
-      髙山　龍博      <br>
-    </p>
-      <p>[ 監事 ]<br>
-        　西　 美江</p></td>
-    <td width="163"><p>大林　久信<br>
-      宮本　一代<br>
-山田　智彦</p>
-     </td>
-  </tr>
-</tbody></table>
-
-<h4 class="letter_title">設立趣旨・目的</h4>
-
-<p>新卒無業者や、早期離職者が増える中で、思うように就職ができない若者がフリーターやニートになっている現状を憂い、学校を卒業してしまった彼らを、もう一度救う方法がないか、かつて学生の就職指導に携わった人たちが集まって、平成１６年に設立しました。</p>
-<p>ニートの状態におられる方や、スキルアップを必要としている人など、多くの人々に就労支援、カウンセリングなどをしていくうえで、公共的役割を担った立場、組織として、サービス水準を高め、親身になって幅広く活動することの重要性・必要性を感じ設立に至りました。</p>
-<p>若年層には職業観を持たせるための業界研究、資格取得、職場の基礎知識を習得できる場を提供し、社会に役立つ人材を育成する。</p>
-<p>中高年には産業間移動の推進のために各自が能力開発をし、目標を持ち、自己実現を図り、雇用機会の拡充に寄与する。</p>
-<p>皆さんと共に会社の宝である人材を育成し、かつ、就労支援などを行い、社会に貢献していく所存です。</p>
-
-<h4 class="letter_title">活動内容</h4>
-
-<ul class="out_activity">
-  <li>求職者の就職活動のサポート、個別相談の実施</li>
-  <li> 学校への就職指導・支援事業の受託<br>
-    　　（就職活動ガイダンスの講演・講師派遣・講座の実施）</li>
-  <li>公共職業訓練委託職業訓練校開校</li>
-  <li>子ども・若者支援事業の開催</li>
-  <li>「内定者研修」等の実施</li>
-  <li>雇用・教育行政のお手伝い</li>
-</ul>
-
-<h4 class="letter_title">活動実績</h4>
-
-  <ul class="out_activity">
-  <li>旧雇用・能力開発機構、高齢・障害・求職者雇用支援機構委託　職業訓練（平成１８年度～）</li>
-  <li>奈良県委託　職業訓練（平成１８年度～）</li>
-    <li>奈良県委託　青少年自立特別支援事業「ニート脱出サークル」の実施（平成１９年度～）</li>
-    <li>奈良県委託　青少年自立特別支援事業「パソコンなら青年お助け隊」事業の実施<br>
-      　　（平成20年～）</li>
-    <li>奈良県とＮＰＯ法人との協働事業「高校インターンシップ」の実施（平成１８年度）</li>
-    <li>橿原市委託　ホームページ作成の指導（平成２２年度・平成２３年度）</li>
-    <li>橿原市委託　初心者向けパソコン講座（平成２２年度・平成２３年度）<br>
-      他</li>
-
-          <!-- 原稿-->
-          <div id="index_bottom_news">
-            <div id="index_news">
-              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a></p>
-            </div>
-          </div>
-        </div>
-        <div id="column_right">
-          <!--ここから--> <br>
-          <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html"
-
-                target="_parent"><img src="./../../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-              <a href="./../honninkai/index.html" target="_parent"><img
-
-                  src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-            </div>
-            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
-            <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
-            <br>
-            <p></p>
-          </div>
-          <div class="bannerbox">
-            <p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./../../image/menu_5.PNG"
-
-                  alt=""></a></p>
-          </div>
-          <div class="bannerbox">
-            <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../../image/menu_6.PNG"
-
-                  alt=""></a></p>
-          </div>
-          <div id="whatsnew">
-            <ul>
-              <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
-                  職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>
-                  15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>
-                  参加者募集中</a></li>
-              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク
-                  ル』<br>
-                  ニート・ひきこもりからの自立支援<br>
-                  参加者募集中</a></li>
-              <li><a href="./../Questionnaire/index.html" target="_blank">貴
-                  社が求める人材に関するアンケートお願い</a></li>
-            </ul>
-          </div>
-          <ul id="csschool">
-            <li id="title2"><img src="./../../image/side_title.jpg" alt="CSスクール" height="109"
-
-                width="240"></li>
-            <li><a href="./../school/index.html" target="_parent">本
-                部・橿原新ノ口校</a></li>
-          </ul>
-          <div>
-            <p>パソコンのトラブル<br>
-              相談はこちらへ</p>
-            <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
-
-                src="./../../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>
-        </div>
-        <!--ここまで--> </div>
-      <div id="foot_link">
-        <ul>
-          <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
-
-                src="./../../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
-
-                width="129"><br>
-              奈良県青少年・生涯学習課</a></li>
-          <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
-
-                src="./../../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
-
-                height="55" width="127"><br>
-              奈良 若者サポートステーション</a></li>
-          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../../image/banner_miminashichiiki.jpg"
-
-                alt="みみなし地域学級" height="106" width="94"><br>
-              みみなし地域学級</a></li>
-          <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
-
-              target="_blank"><img src="./../../image/banner_kyoudou.gif" alt="橿原協働のひろば"
-
-                height="69" width="161"><br>
-              橿原市　協働のひろば</a></li>
-        </ul>
-      </div>
-    </div>
+    <div id="wrapper">      <div id="header">        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"              width="452"></a> </h1>        <div id="right">          <ul>            <li id="index">&lt;%= @config.top_home_page() %&gt;</li>            <li id="contact"><a href="./../contact/index.html"></a><br>            </li>            <li id="menu_sitemap"><a href="./../sitemap/index.html" target="_parent"></a><br>            </li>          </ul>          <p>本部：橿原新ノ口校<br>            奈良県橿原市葛本町307-12　アメニティ24-20A<br>            TEL&amp;FAX:0744-29-6776<br>            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>        </div>        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>      </div>      <div id="column">        <div id="column_left">          <ul id="sub_menu">            <li id="outline"><a href="./../outline/index.html" target="_parent">団                体概要</a></li>            <li id="admission"><a href="./../admission/index.html" target="_parent">ご                支援・入会のご案内</a></li>            <li id="link"><a href="./../link/index.html">リンク集</a></li>          </ul>          <ul id="glo_menu">            <li id="school"><a href="./../school/index.html" target="_parent">職                業訓練・CSスクール</a></li>            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ                ソコンなら青年おたすけ隊</a></li>            <li id="counseling"><a href="./../counseling/index.html" target="_parent">相                談・カウンセリング</a></li>            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー                ト脱出サークル</a></li>          </ul>          <!-- 原稿--> &lt;%= @page.get_index() %&gt;          <!-- 原稿-->          <div id="index_bottom_news">            <div id="index_news">              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a></p>            </div>          </div>        </div>        <div id="column_right">          <!--ここから--> <br>          <div id="banner_zone">            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><br>              </a></div>            <div> <a href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"                  alt="平成30年ひきこもりセミナー"><!--家族の会--></a> </div>            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img                  src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>            <a href="http://cscnara.blog.jp/" target="_top"><img src="./../image/menu_5.PNG"                alt="ニート・ひきこもりから脱出しよう！！"></a></div>          <div class="bannerbox"> </div>          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../image/menu_6.PNG"                alt="わーく・ワク"></a></p>                      <ul>              <li><a href="./../chukansyurou/index.html">奈良県委託『若年就                  職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>                  15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>                  参加者募集中</a></li>              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク ル』<br>                  ニート・ひきこもりからの自立支援<br>                  参加者募集中</a></li>              <li><a href="./../Questionnaire/index.html" target="_blank">貴                  社が求める人材に関するアンケートお願い</a></li>            </ul>          </div>          <ul id="csschool">            <li id="title2"><img src="./../image/side_title.jpg" alt="CSスクール" height="109"                width="240"></li>            <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>          </ul>          <div>            <p>パソコンのトラブル<br>              相談はこちらへ</p>            <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img                src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>        </div>        <!--ここまで--> </div>      <div id="foot_link">        <ul>          <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img                src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"                width="129"><br>              奈良県青少年・生涯学習課</a></li>                    <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img                src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"                height="55" width="127"><br>              奈良 若者サポートステーション</a></li>          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"                alt="みみなし地域学級" height="106" width="94"><br>              みみなし地域学級</a></li>          <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"              target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"                height="69" width="161"><br>              橿原市　協働のひろば</a></li>        </ul>      </div>    <div id="foot_wrapper"> </div>  <html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
     <div id="foot_wrapper">
+      <div id="footer">
+        <dl>
+          <dt>CSスクール</dt>
+          <dd><a href="../school/index.html" target="_parent">橿原 新ノ口校</a></dd>
+        </dl>
+        <ul>
+          <li><a href="../pasokonn/index.html" target="_parent">パ ソコンなら青年お助け隊</a></li>
+          <li><a href="../counseling/index.html" target="_parent">相 談・カウンセリング</a></li>
+        </ul>
+        <ul>
+          <li><a href="../outline/index.html">団体概要</a></li>
+          <li><a href="../admission/index.html" target="_parent">ご 支援・入会のお願い</a></li>
+          <li><a href="../link/index.html" target="_parent">リンク集</a></li>
+          <li><a href="../sitemap/index.html" target="_parent">サ イトマップ</a></li>
+          <li><a href="../contact/index.html" target="_parent">お 問合せ</a></li>
+        </ul>
+        <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
+            width="256"> </p>
+      </div>
     </div>
+    <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1">
+    <p style="text-align: center">&lt;%= Time.now.strftime("%Y-%m-%d %H:%M:%S
+      (%A)") %&gt;</p>
   </body>
-﻿
-<div id="foot_wrapper">
-<div id="footer">
-  <dl>
-    <dt>CSスクール</dt>
-    <dd><a href="http://cscnara.ksaka.net/school.html" target="_parent">橿原
-        新ノ口校</a></dd>
-    <dd><a href="http://cscnara.ksaka.net/school.html" target="_parent">奈良
-        大安寺校</a></dd>
-  </dl>
-  <ul>
-    <li><a href="http://cscnara.ksaka.net/pasokonn.html" target="_parent">パ
-        ソコンなら青年お助け隊</a></li>
-    <li><a href="http://cscnara.ksaka.net/counseling.html" target="_parent">相
-        談・カウンセリング</a></li>
-  </ul>
-  <ul>
-    <li><a href="http://cscnara.ksaka.net/outline.html">団体概要</a></li>
-    <li><a href="http://cscnara.ksaka.net/admission.html" target="_parent">ご
-        支援・入会のお願い</a></li>
-    <li><a href="http://cscnara.ksaka.net/link.html" target="_parent">リンク集</a></li>
-    <li><a href="http://cscnara.ksaka.net/sitemap.html" target="_parent">サ
-        イトマップ</a></li>
-    <li><a href="http://cscnara.ksaka.net/contact.html" target="_parent">お
-        問合せ</a></li>
-  </ul>
-  <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
-
-      width="256" /> </p>
-</div>
-</div>
-<img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
-</html>
-
-<p style="text-align: center">2019-05-30 15:29:04 (Thursday)</p>
 </html>
