--- a/www/school/index.html
+++ b/www/school/index.html
@@ -1,18 +1,17 @@
-﻿<!doctype html>
-<html><head>
+
   <meta charset = "utf-8">
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-30 15:29:04 (Thursday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-30 21:18:45 (Thursday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
   <title></title>
-        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
-		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
-        <link href="./../image/common.css" rel="stylesheet" type="text/css">
-		        <link rel="shortcut icon" href="./../images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
+  <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
+  <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="./../images/favicon.ico">
 
   <script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
 
@@ -28,228 +27,53 @@
 
 </script>
 
-    <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
+  top: 18px !important;
+  left: 50% !important;
+  margin-left: -100px !important;
+  width: 200px !important;
+  border: 2px rgba(255,255,255,.38) solid !important;
+  border-radius: 4px !important;
 }
 
 .en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
+  margin-left: 0px !important;
 }
 </style>
 
 
-  <title>NPO法人　キャリアサポートセンター奈良</title>
+<title>NPO法人　キャリアサポートセンター奈良</title>
 
-</head>
-  <body class="page">
-    <div id="wrapper">
-      <div id="header">
-        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
-
-              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
-
-              width="452"></a> </h1>
-        <div id="right">
-          <ul>
-            <li id="index">http://cscnara.ksaka.net/index.html</li>
-            <li id="contact"><a href="./../contact/index.html"></a><br>
-            </li>
-            <li id="menu_sitemap"><a href="./../sitemap/index.html"
-
-                target="_parent"></a><br>
-            </li>
-          </ul>
-          <p>本部：橿原新ノ口校<br>
-            奈良県橿原市葛本町307-12　アメニティ24-20A<br>
-            TEL&amp;FAX:0744-29-6776<br>
-            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>
-        </div>
-        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>
-      </div>
-      <div id="column">
-        <div id="column_left">
-          <ul id="sub_menu">
-            <li id="outline"><a href="./../outline/index.html" target="_parent">団
-                体概要</a></li>
-            <li id="admission"><a href="./../admission/index.html"
-
-                target="_parent">ご支援・入会のご案内</a></li>
-            <li id="link"><a href="./../link/index.html">リンク集</a></li>
-          </ul>
-          <ul id="glo_menu">
-            <li id="school"><a href="./../school/index.html" target="_parent">職
-                業訓練・CSスクール</a></li>
-            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ
-                ソコンなら青年おたすけ隊</a></li>
-            <li id="counseling"><a href="./../counseling/index.html"
-
-                target="_parent">相談・カウンセリング</a></li>
-            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
-                ト脱出サークル</a></li>
-          </ul>
-          <!-- 原稿--> <div id="con_wrapper">
-
-  <h4 class="letter_title">職業訓練　CSスクール</h4>
-
-<p>NPO法人キャリアサポートセンター奈良　CSスクールでは、求職中の方へ次のお仕事に繋がるスキル習得のお手伝いをしています。<br>
-  当校では、パソコンのスキルの習得はもちろんですが、履歴書の書き方・面接の受け方から、今まで送ってこられたキャリアをどのように生かすか、あなたが今後どのような道を進みたいのかまでを真摯に相談していただる多彩な講師とキャリアカウンセラーの資格を持つアドバイザーが在籍しています。<br>
-また、受講生の方々との集団生活を送るなかで、求職中に起こる様々な悩みを打ち明けられる場、自分とは違う考えの人との交流を持てる場としてもご活用していただければ、と考えています。</p>
-<p>職業訓練の概要はこちらをご覧ください</p>
-<p><a href="http://www.mhlw.go.jp/seisakunitsuite/bunya/koyou_roudou/shokugyounouryoku/" target="_blank">独立行政法人　高齢・生涯・求職者雇用支援機構</a></p>
-<p><a href="http://www3.jeed.or.jp/nara/poly/" target="_blank">ポリテクセンター奈良</a></p>
-<p><a href="http://www.mhlw.go.jp/bunya/nouryoku/training_worker.html" target="_blank">厚生労働省　職業訓練</a></p>
-
-<h4 class="letter_title" id="ninokuchi_cs">本部・橿原新ノ口校</h4>
-  <p>〒634-0007<br>
-  奈良県橿原市葛本町307番地の12　アメニティ24-20A（2階）<br>
-  TEL ＆ FAX：（0744）29-6776<br>
-  近鉄橿原線新ノ口駅から徒歩5分</p>
-  <p><img src="images/ninokuchi_exterior.jpg" alt="新ノ口校外観" width="200" height="153"><img src="images/ninokuchi_interior.jpg" alt="新ノ口校教室風景" width="194" height="153"></p>
-  <p>地図</p>
-  <iframe src="http://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18&amp;output=embed" scrolling="no" width="500" height="350" frameborder="0"></iframe><br><small><a href="http://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E8%91%9B%E6%9C%AC%E7%94%BA307-12&amp;aq=&amp;sll=36.5626,136.362305&amp;sspn=47.120477,92.373047&amp;brcurrent=3,0x6001331152742d1f:0x1a8f1ee8195a5dc9,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E6%A9%BF%E5%8E%9F%E5%B8%82%E8%91%9B%E6%9C%AC%E7%94%BA%EF%BC%93%EF%BC%90%EF%BC%97&amp;ll=34.526451,135.798397&amp;spn=0.001547,0.002682&amp;z=18" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
-<h4 class="letter_title" id="daianji_cs">奈良大安寺校</h4>
-  <p>〒630－8141<br>
-  奈良県奈良市南京終町3丁目1528-6　奈良OAシステムビル2階<br>
-  TEL ＆ FAX：（0742）93-8066<br>
-  奈良交通バス・JR奈良駅、近鉄奈良駅より「シャープ前・杏南町・杏中町・白土町」行き乗車「大安寺」バス停下車　徒歩約5分<br>
-  大安寺バス停より南方の方は「南京終町」バス停下車　徒歩4分</p>
-  <p><img src="images/daianji_exterior.jpg" alt="大安寺校外観" width="243" height="150"><img src="images/daianji_interior.jpg" alt="大安寺校教室風景" width="200" height="150"></p>
-  <p>地図</p>
-<iframe scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA3%E4%B8%81%E7%9B%AE1528-6&amp;aq=&amp;sll=34.515344,135.791616&amp;sspn=0.01197,0.022552&amp;brcurrent=3,0x60013a18306fa581:0x742e8285d5e2d74e,0,0x60013a18306fa581:0x24b9b30f4021c51e&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA%EF%BC%93%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%95%EF%BC%92%EF%BC%98%E2%88%92%EF%BC%96&amp;ll=34.66837,135.819082&amp;spn=0.006177,0.010729&amp;z=16&amp;output=embed" width="500" height="350" frameborder="0"></iframe><br><small><a href="http://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA3%E4%B8%81%E7%9B%AE1528-6&amp;aq=&amp;sll=34.515344,135.791616&amp;sspn=0.01197,0.022552&amp;brcurrent=3,0x60013a18306fa581:0x742e8285d5e2d74e,0,0x60013a18306fa581:0x24b9b30f4021c51e&amp;ie=UTF8&amp;hq=&amp;hnear=%E5%A5%88%E8%89%AF%E7%9C%8C%E5%A5%88%E8%89%AF%E5%B8%82%E5%8D%97%E4%BA%AC%E7%B5%82%E7%94%BA%EF%BC%93%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%95%EF%BC%92%EF%BC%98%E2%88%92%EF%BC%96&amp;ll=34.66837,135.819082&amp;spn=0.006177,0.010729&amp;z=16" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
-
-
-</div>
-
-          <!-- 原稿-->
-          <div id="index_bottom_news">
-            <div id="index_news">
-              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a></p>
-            </div>
-          </div>
-        </div>
-        <div id="column_right">
-          <!--ここから--> <br>
-          <div id="banner_zone">
-            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html"
-
-                target="_parent"><img src="./../../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-              <a href="./../honninkai/index.html" target="_parent"><img
-
-                  src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
-            </div>
-            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
-            <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
-            <br>
-            <p></p>
-          </div>
-          <div class="bannerbox">
-            <p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./../../image/menu_5.PNG"
-
-                  alt=""></a></p>
-          </div>
-          <div class="bannerbox">
-            <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../../image/menu_6.PNG"
-
-                  alt=""></a></p>
-          </div>
-          <div id="whatsnew">
-            <ul>
-              <li><a href="./../chukansyurou/index.html">奈良県委託『若年就
-                  職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>
-                  15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>
-                  参加者募集中</a></li>
-              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク
-                  ル』<br>
-                  ニート・ひきこもりからの自立支援<br>
-                  参加者募集中</a></li>
-              <li><a href="./../Questionnaire/index.html" target="_blank">貴
-                  社が求める人材に関するアンケートお願い</a></li>
-            </ul>
-          </div>
-          <ul id="csschool">
-            <li id="title2"><img src="./../../image/side_title.jpg" alt="CSスクール" height="109"
-
-                width="240"></li>
-            <li><a href="./../school/index.html" target="_parent">本
-                部・橿原新ノ口校</a></li>
-          </ul>
-          <div>
-            <p>パソコンのトラブル<br>
-              相談はこちらへ</p>
-            <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
-
-                src="./../../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>
-        </div>
-        <!--ここまで--> </div>
-      <div id="foot_link">
-        <ul>
-          <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
-
-                src="./../../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
-
-                width="129"><br>
-              奈良県青少年・生涯学習課</a></li>
-          <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
-
-                src="./../../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
-
-                height="55" width="127"><br>
-              奈良 若者サポートステーション</a></li>
-          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../../image/banner_miminashichiiki.jpg"
-
-                alt="みみなし地域学級" height="106" width="94"><br>
-              みみなし地域学級</a></li>
-          <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
-
-              target="_blank"><img src="./../../image/banner_kyoudou.gif" alt="橿原協働のひろば"
-
-                height="69" width="161"><br>
-              橿原市　協働のひろば</a></li>
-        </ul>
-      </div>
-    </div>
+    <div id="wrapper">      <div id="header">        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"              width="452"></a> </h1>        <div id="right">          <ul>            <li id="index">&lt;%= @config.top_home_page() %&gt;</li>            <li id="contact"><a href="./../contact/index.html"></a><br>            </li>            <li id="menu_sitemap"><a href="./../sitemap/index.html" target="_parent"></a><br>            </li>          </ul>          <p>本部：橿原新ノ口校<br>            奈良県橿原市葛本町307-12　アメニティ24-20A<br>            TEL&amp;FAX:0744-29-6776<br>            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>        </div>        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>      </div>      <div id="column">        <div id="column_left">          <ul id="sub_menu">            <li id="outline"><a href="./../outline/index.html" target="_parent">団                体概要</a></li>            <li id="admission"><a href="./../admission/index.html" target="_parent">ご                支援・入会のご案内</a></li>            <li id="link"><a href="./../link/index.html">リンク集</a></li>          </ul>          <ul id="glo_menu">            <li id="school"><a href="./../school/index.html" target="_parent">職                業訓練・CSスクール</a></li>            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ                ソコンなら青年おたすけ隊</a></li>            <li id="counseling"><a href="./../counseling/index.html" target="_parent">相                談・カウンセリング</a></li>            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー                ト脱出サークル</a></li>          </ul>          <!-- 原稿--> &lt;%= @page.get_index() %&gt;          <!-- 原稿-->          <div id="index_bottom_news">            <div id="index_news">              <p><a href="./../circle/index.html">ニート脱出サークル説明会開催</a></p>            </div>          </div>        </div>        <div id="column_right">          <!--ここから--> <br>          <div id="banner_zone">            <div id="banner_hikikomori"> <a href="./../kazokukai/index.html" target="_parent"><img                  src="../image/menu_1.PNG" alt="平成30年ひきこもりセミナー"><br>              </a></div>            <div> <a href="./../honninkai/index.html" target="_parent"><img src="../image/menu_2.PNG"                  alt="平成30年ひきこもりセミナー"><!--家族の会--></a> </div>            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img                  src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等"><!--中間就労--></a></p>            <a href="http://cscnara.blog.jp/" target="_top"><img src="./../image/menu_5.PNG"                alt="ニート・ひきこもりから脱出しよう！！"></a></div>          <div class="bannerbox"> </div>          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../image/menu_6.PNG"                alt="わーく・ワク"></a></p>                      <ul>              <li><a href="./../chukansyurou/index.html">奈良県委託『若年就                  職困難者職場実習等ｻﾎﾟｰﾄ事業』<br>                  15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br>                  参加者募集中</a></li>              <li><a href="./../circle/index.html">H29『子ども・若者支援サーク ル』<br>                  ニート・ひきこもりからの自立支援<br>                  参加者募集中</a></li>              <li><a href="./../Questionnaire/index.html" target="_blank">貴                  社が求める人材に関するアンケートお願い</a></li>            </ul>          </div>          <ul id="csschool">            <li id="title2"><img src="./../image/side_title.jpg" alt="CSスクール" height="109"                width="240"></li>            <li><a href="./../school/index.html" target="_parent">本 部・橿原新ノ口校</a></li>          </ul>          <div>            <p>パソコンのトラブル<br>              相談はこちらへ</p>            <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img                src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"></a> </div>        </div>        <!--ここまで--> </div>      <div id="foot_link">        <ul>          <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img                src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"                width="129"><br>              奈良県青少年・生涯学習課</a></li>                    <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img                src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"                height="55" width="127"><br>              奈良 若者サポートステーション</a></li>          <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"                alt="みみなし地域学級" height="106" width="94"><br>              みみなし地域学級</a></li>          <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"              target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"                height="69" width="161"><br>              橿原市　協働のひろば</a></li>        </ul>      </div>    <div id="foot_wrapper"> </div>  <html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link href="./../image/common.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
     <div id="foot_wrapper">
+      <div id="footer">
+        <dl>
+          <dt>CSスクール</dt>
+          <dd><a href="../school/index.html" target="_parent">橿原 新ノ口校</a></dd>
+        </dl>
+        <ul>
+          <li><a href="../pasokonn/index.html" target="_parent">パ ソコンなら青年お助け隊</a></li>
+          <li><a href="../counseling/index.html" target="_parent">相 談・カウンセリング</a></li>
+        </ul>
+        <ul>
+          <li><a href="../outline/index.html">団体概要</a></li>
+          <li><a href="../admission/index.html" target="_parent">ご 支援・入会のお願い</a></li>
+          <li><a href="../link/index.html" target="_parent">リンク集</a></li>
+          <li><a href="../sitemap/index.html" target="_parent">サ イトマップ</a></li>
+          <li><a href="../contact/index.html" target="_parent">お 問合せ</a></li>
+        </ul>
+        <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
+            width="256"> </p>
+      </div>
     </div>
+    <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1">
+    <p style="text-align: center">&lt;%= Time.now.strftime("%Y-%m-%d %H:%M:%S
+      (%A)") %&gt;</p>
   </body>
-﻿
-<div id="foot_wrapper">
-<div id="footer">
-  <dl>
-    <dt>CSスクール</dt>
-    <dd><a href="http://cscnara.ksaka.net/school.html" target="_parent">橿原
-        新ノ口校</a></dd>
-    <dd><a href="http://cscnara.ksaka.net/school.html" target="_parent">奈良
-        大安寺校</a></dd>
-  </dl>
-  <ul>
-    <li><a href="http://cscnara.ksaka.net/pasokonn.html" target="_parent">パ
-        ソコンなら青年お助け隊</a></li>
-    <li><a href="http://cscnara.ksaka.net/counseling.html" target="_parent">相
-        談・カウンセリング</a></li>
-  </ul>
-  <ul>
-    <li><a href="http://cscnara.ksaka.net/outline.html">団体概要</a></li>
-    <li><a href="http://cscnara.ksaka.net/admission.html" target="_parent">ご
-        支援・入会のお願い</a></li>
-    <li><a href="http://cscnara.ksaka.net/link.html" target="_parent">リンク集</a></li>
-    <li><a href="http://cscnara.ksaka.net/sitemap.html" target="_parent">サ
-        イトマップ</a></li>
-    <li><a href="http://cscnara.ksaka.net/contact.html" target="_parent">お
-        問合せ</a></li>
-  </ul>
-  <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
-
-      width="256" /> </p>
-</div>
-</div>
-<img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
-</html>
-
-<p style="text-align: center">2019-05-30 15:29:04 (Thursday)</p>
 </html>
