--- a/www/school/index.html
+++ b/www/school/index.html
@@ -4,7 +4,7 @@
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-31 06:43:24 (Friday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-31 09:10:19 (Friday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
@@ -42,12 +42,15 @@
 .en-markup-crop-options div div:first-of-type {
   margin-left: 0px !important;
 }
+
+a:hover{ font-size: 30px;
+          color: red; }
 </style>
 
 
 <title>NPO法人　キャリアサポートセンター奈良</title>
 
-</head><body class="page">    <div id="wrapper">      <div id="header">        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"              width="452"></a> </h1>        <div id="right">          <ul>            <li id="index">http://cscnara.ksaka.net/index.html</li>            <li id="contact"> <br>            </li>            <li id="menu_sitemap"> <br>            </li>          </ul>          <p>本部：橿原新ノ口校<br>            奈良県橿原市葛本町307-12　アメニティ24-20A<br>            TEL&amp;FAX:0744-29-6776<br>            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>        </div>        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>      </div>      <div id="column">        <div id="column_left">          <ul id="sub_menu">            <li id="outline"><a href="./../outline/index.html" target="_parent">団                体概要</a></li>            <li id="admission"><a href="./../admission/index.html" target="_parent">ご                支援・入会のご案内</a></li>            <li id="link"><a href="./../link/index.html">リンク集</a></li>          </ul>          <ul id="glo_menu">            <li id="school"><a href="./../school/index.html" target="_parent">職                業訓練・CSスクール</a></li>            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ                ソコンなら青年おたすけ隊</a></li>            <li id="counseling"><a href="./../counseling/index.html" target="_parent">相                談・カウンセリング</a></li>            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー                ト脱出サークル</a></li>          </ul>          <!-- 原稿--> 
+</head><body class="page">    <div id="wrapper">      <div id="header">        <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img              src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"              width="452"></a> </h1>        <div id="right">          <ul>            <li id="index">http://cscnara.ksaka.net/index.html</li>            <li id="contact"> <br>            </li>            <li id="menu_sitemap"> <br>            </li>          </ul>          <p>本部：橿原新ノ口校<br>            奈良県橿原市葛本町307-12　アメニティ24-20A<br>            TEL&amp;FAX:0744-29-6776<br>            メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>        </div>        <h2>求職者支援訓練・パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>      </div>      <div id="column">        <div id="column_left">          <ul id="sub_menu">            <li id="outline"><a href="./../outline/index.html" target="_parent">団                体概要</a></li>            <li id="admission"><a href="./../admission/index.html" target="_parent">ご                支援・入会のご案内</a></li>            <li id="link"><a href="./../link/index.html">リンク集</a></li>          </ul>          <ul id="glo_menu">            <li id="school"><a href="./../school/index.html" target="_parent">職                業訓練・CSスクール</a></li>            <li id="pasokon"><a href="./../pasokonn/index.html" target="_parent">パ                ソコンなら青年おたすけ隊</a></li>            <li id="counseling"><a href="./../counseling/index.html" target="_parent">相                談・カウンセリング</a></li>            <li id="circle"><a href="./../circle/index.html" target="_parent">ニー                ト脱出サークル</a></li>          </ul>          <table style="width: 652px; height: 106px;" border="0">            <tbody>              <tr>                <td style="background-color: #ff9966;"><b><a href="./../school/index.html">職                      業訓練<br>                      CSスクール</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../pasokonn/index.html">パ                      ソコンなら<br>                      青年お助けたい</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../counseling/index.html">相                      談<br>                      カウンセリング</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../circle/index.html">自                      立支援<br>                      サークル</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../outline/index.html">団                      体概要</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../admission/index.html">ご                      支援<br>                      入会のご案内</a></b></td>                <td style="background-color: #ff9966;"><b><a href="./../link/index.html">リ                      ンク集</a></b></td>              </tr>            </tbody>          </table>          &nbsp;<!-- 原稿--> 
     <div id="con_wrapper">
       <h4 class="letter_title">職業訓練　CSスクール</h4>
       <p>NPO法人キャリアサポートセンター奈良　CSスクールでは、求職中の方へ次のお仕事に繋がるスキル習得のお手伝いをしています。<br>
@@ -102,7 +105,7 @@
       </div>
     </div>
     <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1">
-    <p style="text-align: center">2019-05-31 06:43:24
+    <p style="text-align: center">2019-05-31 09:10:19
       (Friday)</p>
   </body>
 </html>
